cmake_minimum_required(VERSION 3.0)
project(acm)

set(CMAKE_CXX_STANDARD 14)

add_executable(acm main.cpp)
add_executable(C cf/827.div4/C.cpp)
add_executable(D vj/Basic/D.cpp)
add_executable(E hnie/3week/E.cpp)
add_executable(B vj/Math/B.cpp)
add_executable(I vj/Basic/I.cpp)

add_executable(p2635 poj/p2635.cpp)

add_executable(sqlist hnie/11.13/sqlist.cpp hnie/11.13/sqlist.h)

add_executable(12.10 hnie/12.10.cpp hnie/Demo/Demo.cpp)

add_executable(exp6 hnie/12.17/exp6.cpp)

add_executable(F vj/3.12/F.cpp)
add_executable(exp7 hnie/12.17/exp7.cpp)
add_executable(exp8 hnie/12.17/exp8.cpp)
add_executable(exp9 hnie/12.17/exp9.cpp)
add_executable(exp10 hnie/12.17/exp10.cpp)

add_executable(teacher poj/teacher.cpp poj/teacher.h)
add_executable(test poj/test.cpp)

add_executable(tmp vj/3.12/tmp.cpp)
add_executable(TT vj/3.12/TT.cpp)

add_executable(G vj/Basic/G.cpp)

add_executable(Demo vj/Math/Demo.cpp)


add_executable(Demo_2 hnie/4week/Demo_2.cpp)
add_executable(YES hnie/5week/YES.cpp)
add_executable(Server hnie/5week/Server.cpp)

add_executable(AC hnie/6.2/AC.cpp)

add_executable(K vj/Basic/K.cpp)
add_executable(Test vj/Basic/Math.cpp)
add_executable(Math vj/Basic/Math.cpp)

add_executable(L vj/Basic/L.cpp)
add_executable(N vj/Basic/N.cpp)
add_executable(M vj/Math/M.cpp)

add_executable(first linux/first.c)
add_executable(4.38 linux/4.38.c)

add_executable(A vj/Math/A.cpp)
add_executable(p3259 poj/p3259.cpp)
