cmake_minimum_required(VERSION 3.0)
project(acm)

set(CMAKE_CXX_STANDARD 14)

add_executable(acm main.cpp)
add_executable(C lanqiao/C.cpp)
add_executable(D lanqiao/D.cpp)
add_executable(E hnie/3week/E.cpp)
add_executable(B lanqiao/B.cpp)
add_executable(I vj/Basic/I.cpp)

add_executable(p2635 poj/p2635.cpp)

add_executable(sqlist hnie/11.13/sqlist.cpp hnie/11.13/sqlist.h)

add_executable(12.10 hnie/12.10.cpp hnie/Demo/Demo.cpp)

add_executable(exp6 hnie/12.17/exp6.cpp)

add_executable(F vj/3.12/F.cpp)
add_executable(exp7 hnie/12.17/exp7.cpp)
add_executable(exp8 hnie/12.17/exp8.cpp)
add_executable(exp9 hnie/12.17/exp9.cpp)
add_executable(exp10 hnie/12.17/exp10.cpp)

add_executable(teacher poj/teacher.cpp poj/teacher.h)

add_executable(tmp vj/3.12/tmp.cpp)
add_executable(TT vj/3.12/TT.cpp)

add_executable(G vj/Basic/G.cpp)

add_executable(Demo vj/Math/Demo.cpp)


add_executable(Demo_2 hnie/4week/Demo_2.cpp)
add_executable(YES hnie/5week/YES.cpp)
add_executable(Server hnie/5week/Server.cpp)

add_executable(AC hnie/6.2/AC.cpp)

add_executable(K vj/Basic/K.cpp)
add_executable(Math vj/Basic/Math.cpp)

add_executable(L vj/Basic/L.cpp)
add_executable(N vj/Basic/N.cpp)
add_executable(M vj/Math/M.cpp)

add_executable(first linux/first.c)
add_executable(4.38 linux/4.38.c)

add_executable(A lanqiao/A.cpp)
add_executable(p3259 poj/p3259.cpp)

add_executable(Huffman cf/827.div4/Huffman.cpp)

add_executable(ttttt cf/827.div4/ttttt.cpp)
add_executable(03 hnie/10.30/03.cpp)
add_executable(04 hnie/10.30/04.cpp)
add_executable(05 hnie/10.30/07.cpp)
add_executable(p1176 hdu/p1176.cpp)
add_executable(p2382 lanqiao/p2382.cpp)
add_executable(p2117 lanqiao/p2117.cpp)
add_executable(p2097 lanqiao/p2097.cpp)
add_executable(d182 lanqiao/d182.cpp)
add_executable(t1 lanqiao/t1.cpp)

add_executable(size lanqiao/size.cpp)
add_executable(test leetcode/test.cpp)